PRJ_VER=0.7.991
SUMMARY=Fixed Bug 725615, 725617;Remove fedpkg_commit, use fedpkg_import instead; Improved Zanata Support.
BODHI_UPDATE_TYPE=bugfix
REDHAT_BUGZILLA=725615, 725617
[Changes]
- Fixed Bug 725615 - cmake-fedora: Use UTC for changelog
- Fixed Bug 725617 - cmake-fedora: target 'tag' should stop when tag file exists.
- Module CompileEnv.cmake is obsoleted by ManageEnvironment.cmake
  because it is what the variable actually store.
- Revised ManageTranslation, now zanata.xml.in can be put to either
  CMAKE_SOURCE_DIR or CMAKE_CURRENT_SOURCE_DIR.
- ManageReleaseOnFedora:
  + New Constants: FEDORA_NEXT_RELEASE_TAGS, FEDORA_SUPPORTED_RELEASE_TAGS.
  + Remove NORAWHIDE, as user can use TAGS to achieve the same.
  + Actually mkdir and clone project if the FedPkg directory is missing.
- ManageTranslation: Fix zanata.xml path problem